--- a/src/main/resources/templates/root.html
+++ b/src/main/resources/templates/root.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     This is my root page.
+    <br/>
+    <form action="/login">
+        <button type="submit">Login</button>
+    </form>
 </body>
 </html>
