Extended REST & Web API, converted spaces to tabs

--- a/src/main/resources/templates/login/invalid.html
+++ b/src/main/resources/templates/login/invalid.html
@@ -3,13 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Main</title>
+	<title>Document</title>
 </head>
 <body>
-	<p>Welcome.</p>
-	<p>This is the home page. Please login to proceed.</p>
-	<form action="/login">
-		<button type="submit">Login</button>
-	</form>
+	This is my invalid login page!
 </body>
 </html>
