--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -3,12 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Main</title>
+	<title>Document</title>
 </head>
 <body>
-	<p>Welcome.</p>
-	<p>This is the home page. Please login to proceed.</p>
-	<form action="/login">
+	<form action="/login" method="post">
+		<input type="text" name="user"/>
+		<br/>
+		<input type="password" name="pass"/>
+		<br/>
 		<button type="submit">Login</button>
 	</form>
 </body>
