--- a/src/main/resources/templates/manage/clients.html
+++ b/src/main/resources/templates/manage/clients.html
@@ -14,7 +14,6 @@
 	</style>
 </head>
 <body>
-	<p>Client</p>
 	<fieldset>
 		<form action="/main">
 			<button type="submit">Return to main</button>
@@ -28,6 +27,7 @@
 			<button type="submit">Next page</button>
 		</form>
 	</fieldset>
+	<p>Clients</p>
 	<table>
 		<thead>
 			<tr>
