--- a/src/main/resources/templates/login/invalid.html
+++ b/src/main/resources/templates/login/invalid.html
@@ -3,9 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Invalid Login</title>
 </head>
 <body>
-	This is my invalid login page!
+	<p>The username and/or password is invalid!</p>
+	<form action="/login" method="get">
+		<button type="submit">Return to the login page</button>
+	</form>
 </body>
 </html>
