--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -3,12 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Login</title>
 </head>
 <body>
+	<fieldset>
+		<form action="/login" method="get">
+			<button type="submit">Choose account type</button>
+		</form>
+	</fieldset>
+	<p>Please fill in your credentials:</p>
 	<form action="/login" method="post">
+		<label for="user">Username:</label>
 		<input type="text" name="user"/>
 		<br/>
+		<label for="pass">Password:</label>
 		<input type="password" name="pass"/>
 		<br/>
 		<button type="submit">Login</button>
