--- a/src/main/resources/templates/login/select.html
+++ b/src/main/resources/templates/login/select.html
@@ -3,7 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Select account type</title>
+	<style>
+		fieldset * {
+			display: inline-block;
+		}
+	</style>
 </head>
 <body>
 	<form action="/login" method="post">
