--- a/src/main/resources/templates/manage/users.html
+++ b/src/main/resources/templates/manage/users.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Manage Users</title>
 	<style>
-		fieldset * {
+		fieldset#head * {
 			display: inline-block;
 		}
 		table * {
@@ -14,7 +14,7 @@
 	</style>
 </head>
 <body>
-	<fieldset>
+	<fieldset id="head">
 		<form action="/main">
 			<button type="submit">Return to main</button>
 		</form>
