--- a/src/main/resources/templates/manage/users/self.html
+++ b/src/main/resources/templates/manage/users/self.html
@@ -5,13 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Manage Your Profile</title>
 	<style>
-		fieldset * {
+		fieldset#head * {
 			display: inline-block;
 		}
 	</style>
 </head>
 <body>
-	<fieldset>
+	<fieldset id="head">
 		<form action="/main">
 			<button type="submit">Return to main</button>
 		</form>
