--- a/src/main/resources/templates/sales/select.html
+++ b/src/main/resources/templates/sales/select.html
@@ -3,19 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title th:if="${pages == null}">Select Period</title>
+	<title th:if="${seller == null}">Select Seller</title>
+	<title th:unless="${seller == null}" th:if="${pages == null}">Select Period</title>
 	<title th:unless="${pages == null}">Select Page</title>
 	<style>
-		fieldset * {
+		fieldset#head * {
 			display: inline-block;
 		}
 	</style>
 </head>
 <body>
-	<fieldset>
+	<fieldset id="head">
 		<form action="/main">
 			<button type="submit">Return to main</button>
 		</form>
+		<th:block th:unless="${seller == null}">
+			<form method="get">
+				<button type="submit">Choose another seller</button>
+			</form>
+		</th:block>
 		<th:block th:unless="${pages == null}">
 			<form method="get">
 				<th:block th:unless="${seller == null}">
@@ -25,10 +31,19 @@
 			</form>
 		</th:block>
 	</fieldset>
-	<p th:if="${pages == null}">Please select period:</p>
+	<p th:if="${seller == null}">Please select seller:</p>
+	<p th:unless="${seller == null}" th:if="${pages == null}">Please select period:</p>
 	<p th:unless="${pages == null}">Please select page:</p>
 	<fieldset>
-		<th:block th:if="${pages == null}">
+		<th:block th:if="${seller == null}">
+			<form method="get">
+				<label for="seller">Select seller:</label>
+				<input type="text" name="seller" />
+				<br />
+				<button type="submit">Select seller</button>
+			</form>
+		</th:block>
+		<th:block th:unless="${seller == null}" th:if="${pages == null}">
 			<form method="get">
 				<th:block th:unless="${seller == null}">
 					<input type="hidden" name="seller" th:value="${seller}" />
