--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -4,9 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Login</title>
+	<style>
+		fieldset#head * {
+			display: inline-block;
+		}
+	</style>
 </head>
 <body>
-	<fieldset>
+	<fieldset id="head">
 		<form action="/login" method="get">
 			<button type="submit">Choose account type</button>
 		</form>
