Extended Web API; Fixed bugs

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,13 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Main</title>
 	<style>
-		fieldset#head * {
+		fieldset.list * {
 			display: inline-block;
 		}
 	</style>
 </head>
 <body>
-	<fieldset id="head">
+	<fieldset class="list">
 		<form action="/login">
 			<button type="submit">Logout</button>
 		</form>
