--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -5,13 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Login</title>
 	<style>
-		fieldset#head * {
+		fieldset.list * {
 			display: inline-block;
 		}
 	</style>
 </head>
 <body>
-	<fieldset id="head">
+	<fieldset class="list">
 		<form action="/login" method="get">
 			<button type="submit">Choose account type</button>
 		</form>
@@ -19,10 +19,10 @@
 	<p>Please fill in your credentials:</p>
 	<form action="/login" method="post">
 		<label for="user">Username:</label>
-		<input type="text" name="user"/>
+		<input type="text" name="user" required="" />
 		<br/>
 		<label for="pass">Password:</label>
-		<input type="password" name="pass"/>
+		<input type="password" name="pass" required="" />
 		<br/>
 		<button type="submit">Login</button>
 	</form>
