--- a/src/main/resources/templates/sales/report.html
+++ b/src/main/resources/templates/sales/report.html
@@ -5,24 +5,27 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sales Report</title>
 	<style>
-		fieldset#head * {
+		fieldset.list * {
 			display: inline-block;
 		}
-		table * {
+		table > thead > tr > th,
+		table > tbody > tr > td {
 			border: 1px solid black;
 		}
 	</style>
 </head>
 <body>
-	<fieldset id="head">
+	<fieldset class="list">
 		<form action="/main">
 			<button type="submit">Return to main</button>
 		</form>
+		<th:block th:if="${specificSeller}">
+			<form method="get">
+				<button type="submit">Choose another seller</button>
+			</form>
+		</th:block>
 		<form method="get">
-			<button type="submit">Choose another seller</button>
-		</form>
-		<form method="get">
-			<th:block th:unless="${seller == null}">
+			<th:block th:if="${specificSeller}" th:unless="${seller == null}">
 				<input type="hidden" name="seller" th:value="${seller}" />
 			</th:block>
 			<button type="submit">Choose another period</button>
@@ -61,8 +64,8 @@
 			</tr>
 			<tr>
 				<th>Product</th>
-				<th>Quantity</th>
 				<th>Price per unit</th>
+				<th>Quantity</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -73,8 +76,8 @@
 						<td th:if="${stats.index == 0}" th:rowspan="${#lists.size(sale.products)}" th:text="${sale.client}" />
 						<td th:if="${stats.index == 0}" th:rowspan="${#lists.size(sale.products)}" th:text="${sale.soldOn}" />
 						<td th:text="${product.product}" />
-						<td th:text="${product.quantity}" />
 						<td th:text="${product.pricePerUnit}" />
+						<td th:text="${product.quantity}" />
 					</tr>
 				</th:block>
 			</th:block>
