--- a/src/main/resources/templates/manage/clients/changeDelete.html
+++ b/src/main/resources/templates/manage/clients/changeDelete.html
@@ -31,7 +31,7 @@
 	<p th:unless="${edit}">Delete Client</p>
 	<fieldset>
 		<form method="post">
-			<input type="hidden" name="client" th:value="${client}" />
+			<input type="hidden" name="name" th:value="${name}" />
 			<th:block th:if="${edit}">
 				<input type="hidden" name="action" th:value="edit" />
 			</th:block>
@@ -49,7 +49,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td th:text="${client}" />
+							<td th:text="${name}" />
 							<td>
 								<input type="text" name="new_name" placeholder="(Unchanged)" />
 							</td>
@@ -71,7 +71,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td th:text="${client}" />
+							<td th:text="${name}" />
 							<td>
 								<input type="text" name="reason" required="" />
 							</td>
