--- a/src/main/resources/templates/manage/pageSelect.html
+++ b/src/main/resources/templates/manage/pageSelect.html
@@ -18,11 +18,16 @@
 	</fieldset>
 	<p>Please select page:</p>
 	<fieldset class="list">
-		<th:block th:each="z : ${#numbers.sequence(1, pages)}">
-			<form method="get">
-				<input type="hidden" name="page" th:value="${z}" />
-				<button type="submit" th:text="${z}" />
-			</form>
+		<th:block th:if="${pages == 0}">
+			<p>No records available</p>
+		</th:block>
+		<th:block th:unless="${pages == 0}">
+			<th:block th:each="z : ${#numbers.sequence(1, pages)}">
+				<form method="get">
+					<input type="hidden" name="page" th:value="${z}" />
+					<button type="submit" th:text="${z}" />
+				</form>
+			</th:block>
 		</th:block>
 	</fieldset>
 </body>
